--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola</title>
+    <title>Hola Mundo</title>
 </head>
 
 <body>
     <p>
-        Hola estudiantes este es mi sitio web sigueme on twitter.
+        Hello world follow me on twitter if you have questions, aske me on twitter or other social media that you select. 
     </p>
 
 
